Fix main menu on mobile

--- a/src/app/demo.component.css
+++ b/src/app/demo.component.css
@@ -48,3 +48,22 @@ header.navbar {
         animation: octocat-wave 560ms ease-in-out
     }
 }
+
+.navbar-nav-scroll {
+    overflow: visible;
+}
+
+@media (max-width: 991.98px) {
+    .navbar-nav-scroll {
+        max-width: 100%;
+        height: 2.5rem;
+        margin-top: .25rem;
+        overflow: hidden;
+    }
+    .navbar-nav-scroll .navbar-nav {
+        padding-bottom: 2rem;
+        overflow-x: auto;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+    }
+}
